--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- JavaX Annotation API -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
